--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,14 @@
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+html {
+  box-sizing: border-box;
+}
+
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 body {
@@ -18,16 +22,28 @@ body {
 
 ul {
   list-style: none;
+  padding: 0;
+}
+p {
+  margin: 0;
+  padding: 0;
 }
 .body {
+  /* width: 1200px; */
   background-color: #fff;
   color: #333333;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   /* justify-content: center; */
   margin: 30px;
   font-size: 30px;
 }
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 .title {
   font-size: 50px;
   text-align: center;
@@ -43,7 +59,78 @@ ul {
   /* margin: 50px; */
   /*  */
 }
+.is-hidden {
+  display: none;
+}
 
+button.btn {
+  /* display: inline-block; */
+  display: flex;
+  justify-content: center;
+  min-width: 100px;
+  padding: 3px;
+
+  background-color: #188ce8;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  color: #ffffff;
+  /* font-family: Roboto, sans-serif; */
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+}
+.button.primary:hover,
+.button.primary:focus {
+  background-color: #188ce8;
+  color: #ffffff;
+}
+
+.loader {
+  display: flex;
+  border: 4px solid #f3f3f3; /* Light grey */
+  border-top: 4px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 14px;
+  height: 14px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+.photo-card {
+  /* display: flex; */
+  width: calc((100% - 5px * 6) / 6);
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+.photo__image {
+  width: 100%;
+}
+.stats {
+  /* display: flex; */
+  font-size: 14px;
+}
+.material-icons {
+  font-size: 14px;
+  /* width: 14px; */
+  /* height: 14px; */
+}
 /* .box {
   width: 100%;
 }
