--- a/src/styles.css
+++ b/src/styles.css
@@ -59,11 +59,8 @@ p {
   /* margin: 50px; */
   /*  */
 }
-.is-hidden {
-  display: none;
-}
 
-button.btn {
+.btn {
   /* display: inline-block; */
   display: flex;
   justify-content: center;
@@ -85,16 +82,28 @@ button.btn {
   letter-spacing: 0.06em;
   cursor: pointer;
 }
-.button.primary:hover,
-.button.primary:focus {
+/* .btn:hover,
+.btn:focus {
   background-color: #188ce8;
   color: #ffffff;
+} */
+.btn-more {
+  position: relative;
+  left: 50%;
+  top: 60%;
+  transform: translate(-50%, -50%);
 }
-
 .loader {
   display: flex;
+  position: relative;
+  left: 0;
+  top: 5px;
+
+  /* justify-content: center; */
+
+  margin: 2px;
   border: 4px solid #f3f3f3; /* Light grey */
-  border-top: 4px solid #3498db; /* Blue */
+  border-top: 4px solid #188ce8; /* Blue */
   border-radius: 50%;
   width: 14px;
   height: 14px;
@@ -108,6 +117,9 @@ button.btn {
   100% {
     transform: rotate(360deg);
   }
+}
+.is-hidden {
+  display: none;
 }
 .gallery {
   display: flex;
